# Ultimate-Macroeconomics-Dashboard

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  config.yaml  docker-compose.yaml  drawio_ai_structure.drawio  drawio_structure.drawio  requirements.txt
_container_data/: .env.example  config.yaml  themes.yaml
_container_data/_configs/: world_bank_download_config.json
agent/: Dockerfile  main.py  pyproject.toml
agent/agent/: graph.py  prompts.py  schemas.py  tools.py  usage.py
agent/tests/: test_schemas_smoke.py
app/: Dockerfile  app.py  pyproject.toml
app/assets/: plot_markup_templates.json
app/core/: api_client.py  app_logging.py  assets.py  monitoring.py  page_helpers.py  plotting.py  postgres_client.py  qdrant_client.py  theming.py  token_usage.py  token_usage_store.py
app/pages/: 01_basic_indicators.py  02_economy_structure.py  03_finance_monetary.py  04_trade.py  05_demography.py  06_governance_institutions.py  07_tech_innovation.py  08_health_wellbeing.py  09_education_human_capital.py  10_environment.py  11_ai_agent_chat.py  12_custom_plot_builder.py  13_clustering_sandbox.py  14_yahoo_finance.py  15_news.py  16_settings.py  17_token_usage.py  18_monitoring.py  page_utils.py
app/tests/: conftest.py  test_theming_smoke.py
clustering/: Dockerfile  config.yaml  main.py  pyproject.toml  schemas.py
clustering/tests/: conftest.py  test_smoke.py
downloader_extra/: Dockerfile  client_wb.py  main.py  pyproject.toml  requirements.txt  schema.py
downloader_extra/tests/: conftest.py  test_orm_roundtrip.py
downloader_general/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
downloader_general/src/core/: base_downloaders.py
downloader_general/src/extractors/: __init__.py  github_download.py  world_bank_download.py  yahoo_download.py
downloader_general/src/utils/: db_bootstrap.py  downloads.py  schema.py
downloader_general/tests/: conftest.py  test_db_bootstrap.py  test_news_archive_parsing.py
forecaster/: Dockerfile  main.py  pyproject.toml  schemas.py
forecaster/forecasters/: arima_model.py  auto_arima_model.py  chronos_model.py  moving_average_model.py  prophet_model.py  sarima_model.py  xgboost_model.py
forecaster/forecasters/core/: base.py
forecaster/tests/: test_arima_smoke.py
python_sandbox/: Dockerfile  config.yaml  main.py  pyproject.toml
python_sandbox/tests/: conftest.py  test_run_code_smoke.py
