[project]
name = "umd-agent"
version = "0.8.0"
description = "LangGraph multi-agent AI analyst service."
requires-python = ">=3.12,<3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "ddgs==9.13.0",
    "fastapi==0.121.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.13.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain-core==1.2.23",
    "langchain-openai==1.1.12",
    "langgraph==1.1.4",
    "langgraph-checkpoint==4.0.1",
    "langgraph-prebuilt==1.0.8",
    "langgraph-sdk==0.3.12",
    "langsmith==0.7.23",
    "openai==2.30.0",
    "orjson==3.11.8",
    "ormsgpack==1.12.2",
    "packaging==26.0",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "qdrant-client==1.17.0",
    "regex==2026.3.32",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.48",
    "starlette==0.49.3",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn==0.38.0",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
