[project]
name = "umd-clustering"
version = "0.8.0"
description = "FastAPI service exposing KMeans and DBSCAN clustering."
requires-python = ">=3.12,<3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "fastapi==0.135.2",
    "h11==0.16.0",
    "idna==3.11",
    "joblib==1.5.3",
    "numpy==2.4.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "starlette==1.0.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
