[project]
name = "umd-downloader-extra"
version = "0.8.0"
description = "FastAPI service for on-demand World Bank indicator ingestion."
requires-python = ">=3.12,<3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "colorama==0.4.6",
    "fastapi==0.135.2",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "numpy==2.4.3",
    "polars==1.39.3",
    "polars-runtime-32==1.39.3",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "six==1.17.0",
    "sqlalchemy==2.0.48",
    "starlette==1.0.0",
    "tabulate==0.10.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uvicorn==0.42.0",
    "wbgapi==1.0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.39",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["main.py", "schema.py", "client_wb.py"]
branch = true
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unresolved-import = "ignore"
no-matching-overload = "ignore"
unknown-argument = "ignore"
unresolved-attribute = "warn"
invalid-argument-type = "warn"
invalid-assignment = "warn"
