[project]
name = "umd-forecaster"
version = "0.8.0"
description = "FastAPI service for pmdarima/prophet/chronos forecasting."
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate==1.13.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "chronos-forecasting==2.2.2",
    "click==8.3.1",
    "cmdstanpy==1.3.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "cython==3.2.4",
    "einops==0.8.2",
    "fastapi==0.135.1",
    "filelock==3.25.0",
    "fonttools==4.61.1",
    "fsspec==2026.2.0",
    "h11==0.16.0",
    "holidays==0.92",
    "huggingface-hub==0.36.2",
    "idna==3.11",
    "importlib-resources==6.5.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.3",
    "packaging==26.0",
    "pandas==3.0.1",
    "patsy==1.0.2",
    "pillow==12.1.1",
    "pmdarima==2.1.1",
    "polars==1.39.3",
    "polars-runtime-32==1.39.3",
    "prophet==1.3.0",
    "psutil==7.2.2",
    "pyarrow==23.0.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "regex==2026.2.28",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "setuptools==82.0.0",
    "six==1.17.0",
    "stanio==0.5.1",
    "starlette==0.52.1",
    "statsmodels==0.14.6",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "tqdm==4.67.3",
    "transformers==4.57.6",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.39",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["main.py", "schemas.py", "forecasters"]
branch = true
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unresolved-import = "ignore"
no-matching-overload = "ignore"
unknown-argument = "ignore"
unresolved-attribute = "warn"
invalid-argument-type = "warn"
invalid-assignment = "warn"
